--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="sound_hear_textview">Click on the button when you hear the sound</string>
+    <string name="exit_button_label">Exit</string>
 
 </resources>
