Changes: -starts when start is clicked -audio goes up automatically every 4s in 11 modes -audio start from lowest, unhearable -goes through frequencies 250, 500, 1000, 2000, 4000, 8000 -allows to click when freq heard and posts result after all frequencies are done -only works with right ear at the moment -interface redone -examination has its own activity -buttons for settings, about and 'how to' wait to be implemented'

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Audiometr</string>
+    <string name="app_name">Audiometer</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="sound_hear_textview">Click on the button when you hear the sound</string>
+    <string name="sound_hear_text_view">Click here when you hear the sound</string>
     <string name="exit_button_label">Exit</string>
+    <string name="title_activity_examination">Examination</string>
 
 </resources>
