--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,7 @@
     <string name="sound_hear_text_view">Click here when you hear the sound</string>
     <string name="exit_button_label">Exit</string>
     <string name="title_activity_examination">Examination</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_how_to">How To</string>
 
 </resources>
