--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">Audiometer</string>
     <string name="action_settings">Settings</string>
     <string name="sound_hear_text_view">Click here when you hear the sound</string>
@@ -16,10 +17,12 @@
     <string name="test_info_text_view_label">Only for developers</string>
     <string name="save_button_label">Save</string>
     <string name="test_check_box_label">Test Mode</string>
-    <string name="how_to_points_text_view">
-        1. Plug in your headphones
+    <string name="how_to_points_text_view">1. Plug in your headphones
         \n2. Put headphones into your ears
         \n3. Tap on \'start\' to begin the examination
         \n4. Tap on the button in the middle of the screen when you hear the sound
-        \n5. The graph shows how your ears work</string>
+        \n5. The graph shows how your hearing works</string>
+    <string name="title_activity_graph">Graph</string>
+    <string name="graph_text_view_title">graph</string>
+
 </resources>
