--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,8 @@
     <string name="text_view_settings">settings</string>
     <string name="text_view_about">about</string>
     <string name="about_alert_title">About</string>
-    <string name="about_alert_message">Made by Michał Kuśmierczyk\n</string>
+    <string name="about_alert_message">Made by Michał Kuśmierczyk
+\nver.</string>
     <string name="test_info_text_view_label">Only for developers</string>
     <string name="save_button_label">Save</string>
     <string name="test_check_box_label">Test Mode</string>
@@ -24,5 +25,6 @@
     <string name="title_activity_graph">Graph</string>
     <string name="graph_text_view_title">graph</string>
     <string name="how_to_text_view_label">How to</string>
+    <string name="version_number" translatable="false">0.1</string>
 
 </resources>
