--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -24,4 +24,15 @@
          \n4. Dotknij przycisk na środku ekranu gdy usłyszysz dźwięk
          \n5. Rezultat zostanie wyświetlony pod koniec badania</string>
     <string name="how_to_text_view_label">Jak używać</string>
+    <string name="results_dialog_negative_button_text">Szczegóły</string>
+    <string name="results_dialog_title_text">Wynik</string>
+    <string name="details_threshold_text">" próg słyszenia: "</string>
+    <string name="details_right_ear_text">Prawe ucho:\n</string>
+    <string name="details_left_ear_text">Lewe ucho:\n</string>
+    <string name="details_freq_text">"częst.: "</string>
+    <string name="result_dialog_hearing_loss_text">Nie wykryto ubytków słuchu.
+
+Pamiętaj, że nie jest to profesjonalne badanie. W razie wątpliwości, skontaktuj się z lekarzem.</string><string name="result_dialog_no_hearing_loss_text">Wykryto ubytek słuchu.
+
+Skontaktuj się z lekarzem.</string>
 </resources>
