--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,20 @@
     <string name="title_activity_graph">Graph</string>
     <string name="graph_text_view_title">graph</string>
     <string name="how_to_text_view_label">How to</string>
-    <string name="version_number" translatable="false">1.0</string>
+    <string name="version_number" translatable="false">1.1</string>
+    <string name="results_dialog_negative_button_text">Details</string>
+    <string name="results_dialog_title_text">Result</string>
+    <string name="ok_button_text" translatable="false">Ok</string>
+    <string name="details_freq_text">"freq.: "</string>
+    <string name="details_threshold_text">" hearing threshold: "</string>
+    <string name="details_left_ear_text">Left ear:\n</string>
+    <string name="details_right_ear_text">Right ear:\n</string>
+    <string name="test_number_text_view" translatable="false">Test 1/12</string>
+    <string name="result_dialog_no_hearing_loss_text">Hearing loss found.
+
+Please, contact your doctor.</string>
+    <string name="result_dialog_hearing_loss_text">No hearing loss found.
+
+If in doubt, contact your doctor.</string>
 
 </resources>
